--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     {%extends "templates.html" %}
     {% block content %}
 
-    <h2>A Simple Pyton Web App</h2>
-    <p>Hello Word DevOps !!!!!!!, Our Web App is up and running.</p>
+    <h2>A Simple Python Web App</h2>
+    <p>Hello World DevOps !!!!!!!, Our Web App is up and running.</p>
 
     {% endblock %}
 
